--- a/intro.css
+++ b/intro.css
@@ -1,4 +1,3 @@
-/* GLOBAL STYLES */
 body {
     background: #000;
     padding-top: 5em;
@@ -6,27 +5,49 @@ body {
     justify-content: center;
   }
   
-  /* DEMO-SPECIFIC STYLES */
-  .typewriter h1 {
+  .skeleton h1 {
     color: #00ff00;
     font-family: monospace;
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid #00ff00; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    overflow: hidden; 
+    border-right: .15em solid orange; 
+    white-space: nowrap; 
+    margin: 0 auto; 
+    letter-spacing: .15em; 
+  }
+
+  .typewriter h1 {
     animation: 
       typing 3.5s steps(30, end),
       blink-caret .5s step-end infinite;
   }
+
+  .typewriter2 h1 { 
+    animation: 
+      typing2 0.875s steps(8, end),
+      blink-caret .5s step-end infinite;
+  }
+
+  .typewriter3 h1 {
+    animation: 
+      typing3 1.4s steps(12, end),
+      blink-caret .5s step-end infinite;
+  }
   
-  /* The typing effect */
   @keyframes typing {
     from { width: 0 }
     to { width: 100% }
   }
+
+  @keyframes typing2 {
+    from { width: 75% }
+    to { width: 100% }
+  }
+
+  @keyframes typing3 {
+    from { width: 60% }
+    to { width: 100% }
+  }
   
-  /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
     50% { border-color: #00ff00 }
